--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,10 +5,12 @@ on: workflow_dispatch
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: test
     steps:
       - name: sync-environment-test
         uses: jpoehnelt/secrets-sync-action@v1.7.2
         with:
+          environment: test
           SECRETS: |
             ^FOO
           REPOSITORIES: |
