--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ jobs:
           SECRETS: |
             ^READ_GITHUB_REPO_PAT
           REPOSITORIES: |
-            suleimanwsa/helm-values
+            ^suleimanwsa/helm-values
           DRY_RUN: false
           GITHUB_TOKEN: ${{ secrets.READ_GITHUB_REPO_PAT }}
           CONCURRENCY: 10
