--- a/.github/workflows/vars.yml
+++ b/.github/workflows/vars.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Sync Secrets and Variables
         uses: cbrgm/sync-secrets-action@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.READ_GITHUB_REPO_PAT }}
           target: 'suleimanwsa/helm-values'
           secrets: |
             FOO=${{ secrets.FOO }}
