--- a/.github/workflows/vars.yml
+++ b/.github/workflows/vars.yml
@@ -15,6 +15,6 @@ jobs:
         run: |
           variablet=$(cat test.properties)
           echo $variablet
-          test={{ $variablet }}
+          test={{ "$variablet" }}
           echo $test
            
