--- a/.github/workflows/vars.yml
+++ b/.github/workflows/vars.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Find and Replace
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: "FOO"
+          replace: "{{ vars.FOO }}"
       - name: Sync Secrets and Variables
         run: |
           variablet=$(cat test.properties)
