--- a/.github/workflows/vars.yml
+++ b/.github/workflows/vars.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Sync Secrets and Variables
         run: |
           variablet=$(cat test.properties)
-          echo " testing format function format('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat')"
+          echo 'testing format function format('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat')'
           test=$$variablet
           echo $test
            
