--- a/.github/workflows/vars.yml
+++ b/.github/workflows/vars.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Sync Secrets and Variables
         run: |
           variablet=$(cat test.properties)
-          echo 'testing format function format('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat')'
+          form=format('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat')
+          echo $form
           test=$$variablet
           echo $test
            
