--- a/.github/workflows/vars.yml
+++ b/.github/workflows/vars.yml
@@ -14,8 +14,6 @@ jobs:
       - name: Sync Secrets and Variables
         run: |
           variablet=$(cat test.properties)
-          form=$(echo "{{format('Hello {0} {1} {2}', 'Mona', 'the', 'Octocat')}}")
-          echo $form
-          test=$$variablet
-          echo $test
+          formatted_env=$(echo "${{ format('Environment: {0}', secrets.FOO) }}")
+          echo $formatted_env
            
