--- a/.github/workflows/fetch-pr.yml
+++ b/.github/workflows/fetch-pr.yml
@@ -24,3 +24,4 @@ jobs:
         cat changed_files.txt
         PR_NUMBER=${{ github.event.pull_request.number }}
         echo "pr number = $PR_NUMBER"
+        git diff --name-status origin/main pr-<PR_NUMBER> | grep '^D' | cut -f2-
