--- a/.github/workflows/fetch-pr.yml
+++ b/.github/workflows/fetch-pr.yml
@@ -21,4 +21,5 @@ jobs:
       run: |
         PR_NUMBER=${{ github.event.pull_request.number }}
         echo "pr number = $PR_NUMBER"
-        gh pr diff $PR_NUMBER
+        changed_files=$(gh pr view $PR_NUMBER --json files --jq '.files[] | {path: .path, status: .status}')
+        cat $changed_files
