--- a/.github/workflows/fetch-pr.yml
+++ b/.github/workflows/fetch-pr.yml
@@ -22,4 +22,4 @@ jobs:
         PR_NUMBER=${{ github.event.pull_request.number }}
         echo "pr number = $PR_NUMBER"
         changed_files=$(gh pr view $PR_NUMBER --json files --jq '.files[] | {path: .path, status: .status}')
-        cat $changed_files
+        echo $changed_files
