--- a/.github/workflows/fetch-pr.yml
+++ b/.github/workflows/fetch-pr.yml
@@ -21,4 +21,8 @@ jobs:
       run: |
         PR_NUMBER=${{ github.event.pull_request.number }}
         echo "pr number = $PR_NUMBER"
+        git fetch origin pull/1/head:pr-1
+        git fetch origin                                              
+        git checkout main
+        git pull origin main
         git diff --name-status origin/main pr-1
